--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>혜림뮤직</title>
+    <title>혜림뮤직 메인</title>
     <link rel="stylesheet" href="css/style.css?v=20240319">
 
     <!-- Link Swiper's CSS -->
